--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,10 @@
 {
-  extends: "airbnb"
+  "extends": "airbnb",
+  "rules": {
+    "import/no-extraneous-dependencies": ["error", {
+      devDependencies: [
+        "src/*.test.js",
+      ],
+    }],
+  },
 }
