--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a simple api for running javascript functions based upon percentage chance",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/*.js",
+    "test": "babel-tape-runner ./src/*.test.js | faucet"
   },
   "repository": {
     "type": "git",
@@ -24,10 +25,17 @@
   },
   "homepage": "https://github.com/danmakenoise/chancify#readme",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-tape-runner": "^2.0.1",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint-plugin-react": "^7.1.0",
+    "faucet": "0.0.1",
+    "flow": "^0.2.3",
+    "flow-bin": "^0.52.0",
+    "tape": "^4.8.0"
   }
 }
