--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint src/*.js",
-    "test": "babel-tape-runner ./src/*.test.js | faucet"
+    "test": "npm run lint && npm run test:unit",
+    "test:unit": "babel-tape-runner ./src/*.test.js | faucet"
   },
   "repository": {
     "type": "git",
