--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,11 @@
 {
-  "extends": "airbnb",
+  "extends": [
+    "airbnb",
+    "plugin:flowtype/recommended",
+  ],
+  "plugins": [
+    "flowtype",
+  ],
   "rules": {
     "import/no-extraneous-dependencies": ["error", {
       devDependencies: [
