--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-tape-runner": "^2.0.1",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
