--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,12 @@
   ],
   "rules": {
     "import/no-extraneous-dependencies": ["error", {
-      devDependencies: [
+      "devDependencies": [
         "src/*.test.js",
       ],
     }],
+    "no-use-before-define": ["error", {
+      "functions": false,
+    }]
   },
 }
