--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   "rules": {
     "import/no-extraneous-dependencies": ["error", {
       "devDependencies": [
+        "rollup.config.js"
         "src/*.test.js",
       ],
     }],
