--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "rm -rf ./dist && mkdir ./dist && rollup -c rollup.config.js",
     "lint": "eslint src/*.js",
+    "prepublish": "npm run test && npm run build",
     "test": "npm run lint && npm run test:unit",
     "test:unit": "babel-tape-runner ./src/*.test.js | faucet"
   },
