--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a simple api for running javascript functions based upon percentage chance",
   "main": "basic/index.js",
   "scripts": {
-    "build": "rm -rf ./basic && mkdir ./basic && rollup -c rollup.basic.js",
+    "build": "npm run build:basic && npm run build:wrapper",
+    "build:basic": "rm -rf ./basic && mkdir ./basic && rollup -c rollup.basic.js",
+    "build:wrapper": "rm -rf ./wrapper && mkdir ./wrapper && rollup -c rollup.wrapper.js",
     "lint": "eslint src/*.js",
     "prepublish": "npm run test && npm run build",
     "test": "npm run lint && npm run test:unit",
