--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src/*.js",
     "prepublish": "npm run test && npm run build",
     "test": "npm run lint && npm run test:unit",
-    "test:unit": "babel-tape-runner ./src/*.test.js | faucet"
+    "test:unit": "babel-tape-runner ./src/*.test.js"
   },
   "repository": {
     "type": "git",
